test/fail/enums_and_variants/variant_name_clash.lly
#[
SyntaxError: A class with the name 'Some' already exists.
Where: File "variant_name_clash.lly" at line 8
]#

enum class Option[A] {
    Some(A),
    Some(A)
}
